02. usefull-things-075-footer. UI. GSAP animation on scroll.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,114 @@
 </head>
 
 <body>
-    start
+    <main class="content">
+        <div class="content__inner copy">
+            <h1>Scroll Down</h1>
 
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio maxime ullam
+                facilis, provident iusto mollitia, velit consequatur vero nisi architecto
+                voluptatibus doloribus, magni quod modi illo inventore esse ea unde perspiciatis!
+                Officiis inventore voluptate est id beatae nemo error vel illum temporibus
+                ratione, quis non sunt itaque et, quasi nisi velit sed. Illum, sit? Repellendus
+                aut fugit hic odio deserunt.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio maxime ullam
+                facilis, provident iusto mollitia, velit consequatur vero nisi architecto
+                voluptatibus doloribus, magni quod modi illo inventore esse ea unde perspiciatis!
+                Officiis inventore voluptate est id beatae nemo error vel illum temporibus
+                ratione, quis non sunt itaque et, quasi nisi velit sed. Illum, sit? Repellendus
+                aut fugit hic odio deserunt.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolor
+                unde accusamus dignissimos quaerat optio ab sunt odit soluta ut eveniet,
+                corrupti sit doloribus repudiandae fugiat pariatur, porro ratione
+                dolore dolores quam fugit totam blanditiis. Aliquam laboriosam modi natus
+                debitis ea, illum enim, hic repudiandae soluta omnis ipsum voluptatem
+                dolor rem exercitationem sapiente ipsa, voluptates assumenda aspernatur.
+                Laborum, voluptatum nisi. Vel ut quam, atque eligendi soluta omnis facere
+                dicta minus nisi iusto quasi id sint, molestiae commodi ea error dolore.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolor
+                unde accusamus dignissimos quaerat optio ab sunt odit soluta ut eveniet,
+                corrupti sit doloribus repudiandae fugiat pariatur, porro ratione
+                dolore dolores quam fugit totam blanditiis. Aliquam laboriosam modi natus
+                debitis ea, illum enim, hic repudiandae soluta omnis ipsum voluptatem
+                dolor rem exercitationem sapiente ipsa, voluptates assumenda aspernatur.
+                Laborum, voluptatum nisi. Vel ut quam, atque eligendi soluta omnis facere
+                dicta minus nisi iusto quasi id sint, molestiae commodi ea error dolore.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi error omnis
+                aspernatur quas, ducimus rem explicabo atque soluta iusto eum excepturi,
+                numquam nesciunt. Veniam dicta commodi recusandae sit possimus.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi error omnis
+                aspernatur quas, ducimus rem explicabo atque soluta iusto eum excepturi,
+                numquam nesciunt. Veniam dicta commodi recusandae sit possimus.
+            </p>
+
+            <h1>Scroll some more, please..</h1>
+
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio maxime ullam
+                facilis, provident iusto mollitia, velit consequatur vero nisi architecto
+                voluptatibus doloribus, magni quod modi illo inventore esse ea unde perspiciatis!
+                Officiis inventore voluptate est id beatae nemo error vel illum temporibus
+                ratione, quis non sunt itaque et, quasi nisi velit sed. Illum, sit? Repellendus
+                aut fugit hic odio deserunt.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio maxime ullam
+                facilis, provident iusto mollitia, velit consequatur vero nisi architecto
+                voluptatibus doloribus, magni quod modi illo inventore esse ea unde perspiciatis!
+                Officiis inventore voluptate est id beatae nemo error vel illum temporibus
+                ratione, quis non sunt itaque et, quasi nisi velit sed. Illum, sit? Repellendus
+                aut fugit hic odio deserunt.
+            </p>
+        </div>
+    </main>
+
+    <footer class="fixed__footer">
+        <div class="content">
+            <div class="content__inner">
+                <div class="nav">
+                    <div class="col">
+                        <li>Home</li>
+                        <li>Menu</li>
+                        <li>Projects</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </div>
+                    <div class="col">
+                        <li>Home</li>
+                        <li>Menu</li>
+                        <li>Projects</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </div>
+                    <div class="col">
+                        <li>Home</li>
+                        <li>Menu</li>
+                        <li>Projects</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </div>
+                    <div class="col">
+                        <li>Home</li>
+                        <li>Menu</li>
+                        <li>Projects</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </div>
+                </div>
+
+                <div class="copyright">
+                    <span>2025. All Rights Reserved.</span>
+                    <span>Tutorial from Web.</span>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
